created programmatic segues

--- a/TrafficSegues/Base.lproj/Main.storyboard
+++ b/TrafficSegues/Base.lproj/Main.storyboard
@@ -16,35 +16,41 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="00o-0i-7rs">
-                                <rect key="frame" x="152.66666666666666" y="407" width="85" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oFn-tC-VXK">
+                                <rect key="frame" x="19" y="293" width="129" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemYellowColor"/>
-                                <state key="normal" title="Go to Yellow">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
+                                <state key="normal" title="PUSH TO YELLOW"/>
                                 <connections>
-                                    <segue destination="Uhk-EP-Uou" kind="show" id="7MY-au-CEq"/>
+                                    <action selector="yellowButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R20-mU-Rdj"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="pay-f3-Dtl">
-                                <rect key="frame" x="147" y="365" width="97" height="34"/>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yRW-RX-YuB">
+                                <rect key="frame" x="171" y="367" width="49" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            </switch>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="s9J-y6-bFq">
+                                <rect key="frame" x="232" y="293" width="118" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="PUSH TO GREEN">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="greenButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="33t-3O-DPY"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemRedColor"/>
-                        <constraints>
-                            <constraint firstItem="00o-0i-7rs" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="GeK-L5-rdV"/>
-                            <constraint firstItem="00o-0i-7rs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="i9I-RP-cGS"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Red" id="b3o-8h-zqS">
                         <barButtonItem key="backBarButtonItem" title="Go To Red" id="YQD-Lx-Lyf"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="redTextField" destination="pay-f3-Dtl" id="aQV-5F-jvH"/>
+                        <outlet property="segueSwitch" destination="yRW-RX-YuB" id="MZ9-OS-L5e"/>
+                        <segue destination="Uhk-EP-Uou" kind="show" identifier="Yellow" id="t82-4e-Ept"/>
+                        <segue destination="JmW-tv-fdo" kind="show" identifier="Green" id="vWN-cN-SES"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -58,24 +64,8 @@
                     <view key="view" contentMode="scaleToFill" id="cee-z6-baA">
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MCE-9e-L8e">
-                                <rect key="frame" x="153.66666666666666" y="407" width="83" height="30"/>
-                                <color key="backgroundColor" red="0.0" green="0.56031829119999998" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <state key="normal" title="Go to Green">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <segue destination="JmW-tv-fdo" kind="show" id="M5a-6f-usa"/>
-                                </connections>
-                            </button>
-                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ZSx-Ri-KiL"/>
                         <color key="backgroundColor" systemColor="systemYellowColor"/>
-                        <constraints>
-                            <constraint firstItem="MCE-9e-L8e" firstAttribute="centerX" secondItem="cee-z6-baA" secondAttribute="centerX" id="LNG-Zs-bMs"/>
-                            <constraint firstItem="MCE-9e-L8e" firstAttribute="centerY" secondItem="cee-z6-baA" secondAttribute="centerY" id="S5f-i3-bi5"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Yellow" largeTitleDisplayMode="never" id="Wpg-Vk-smK">
                         <barButtonItem key="backBarButtonItem" title="Back To Yellow" id="fXX-B1-Ehj"/>
@@ -83,7 +73,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="14J-K8-vnh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1930.7692307692307" y="116.58767772511848"/>
+            <point key="canvasLocation" x="1900" y="-245"/>
         </scene>
         <!--Green-->
         <scene sceneID="scb-ZP-acf">
@@ -108,7 +98,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cra-sQ-WY2" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Ktk-D7-TeQ" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2760" y="116.58767772511848"/>
+            <point key="canvasLocation" x="1900" y="471"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="NP4-Gq-6Hh">
